# bitgn-ecom

./: .gitignore  .last_run_id  AGENTS.md  README.md  SPEC_NEXT.md  STATUS.md  pyproject.toml
.claude/commands/: intent-report.md
artifacts/bench/: 0169d1f_ecom_FINAL_v147_p3i6_gpt54_runs1.json  05e56a9_ecom_FINAL_v1101_p3i6_gpt54_runs1_stability.json  09c8d45_ecom_FINAL_v1108_p3i6_gpt54_runs1.json  0c96de4_ecom_FINAL_v1104_p3i6_gpt54_runs1.json  1349f4b_ecom_FINAL_v149_p3i6_gpt54_runs1.json  1437354_ecom_FINAL_v155_p3i6_gpt54_runs1.json  174e1f1_ecom_FINAL_v157_p3i6_gpt54_runs1.json  (+97 more)
docs/: ARCHITECTURE.md  PROMPT_RULES.md
scripts/: __init__.py  analyze_runs.py  arch_report.py  bench_summary.py  bitgn_scraper.py  burst_test.py  capture_workspace.py  compare_scrape_runs.py  failure_report.py  fetch_intent_report.py  generate_test_variants.py  harvest_failed_fixtures.py  harvest_test_cases.py  ingest_bitgn_scores.py  intent_report.py  launch_bench5_offpeak.sh  lmstudio_unload.py  local_bench.py  local_pcm.py  local_runner.py  local_test_runner.py  m0_gate_compare.py  measure_r4_fp.py  offline_replay.py  phase0_partial.py  rebuild_ws_from_raw.py  rebuild_ws_from_transcript.py  rerun_failing_tasks.py  run_emulations.py  scan_ecom1.py  scrape_harness_url.py  scrape_prod_full.py  scrape_prod_run_smoke.py  select_sentinels.py  spike_lmstudio_cancel.py  spike_lmstudio_tools.py  stratified_run.py  verify_local_mirror.py  verify_prod_grader.py  ws_compare.py  (+2 more)
tests/: conftest.py  test_adapter_dispatch.py  test_adapter_gpt_oss_hooks.py  test_adapter_gpt_oss_remote.py  test_adapter_prepass.py  test_adapter_qwen.py  test_adapter_qwen_remote.py  test_adapter_smoke.py  test_addenda_completer.py  test_agent_arch_logging.py  test_agent_body_preservation.py  test_agent_format_validation.py  test_agent_loop.py  test_agent_reactive_injection.py  test_agent_read_tracking.py  test_agent_router_injection.py  test_aggregate.py  test_analyzer_completeness.py  test_arch_constants.py  test_arch_log.py  test_arch_report.py  test_backend_base.py  test_backend_openai_compat.py  test_backend_openai_toolcalling.py  test_bench_summary.py  test_bill_query_skill.py  test_burst.py  test_cite_completer.py  test_classifier.py  test_classifier_reasoning_effort.py  test_classifier_retry.py  test_cli.py  test_cli_resume.py  test_config.py  test_config_backoff.py  test_divergence.py  test_failure_report.py  test_finance_skill.py  test_format_validator.py  test_fraud_cluster_filter.py  (+38 more)
(+482 files in other folders)
