[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bitgn-ecom-agent"
version = "0.1.0"
description = "BitGN ECOM contest agent — port of the PAC1 agent (104/104, gpt-5.4) to bitgn/ecom1-dev"
requires-python = ">=3.12"
dependencies = [
  "pydantic>=2.6",
  "openai>=1.40",
  "PyYAML>=6.0",
  "annotated-types>=0.7.0",
  # BitGN proto/connectrpc stubs are published via buf.build/gen/python
  # (the same pins used by sample-agents/ecom-py). 0.10.x is the first
  # SDK release that ships the bitgn.vm.ecom module; the 0.9.x pin used
  # by the PAC1 agent only carries bitgn.vm.pcm.
  "bitgn-api-connectrpc-python==0.10.0.1.20260508124000+434a5d933432",
  "bitgn-api-protocolbuffers-python==34.1.0.1.20260508124000+434a5d933432",
  "connectrpc",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-mock>=3.12",
]

[project.scripts]
# CLI command stays `bitgn-agent` to match the PAC1 muscle-memory and the
# READMEs across the lineage. The Python package keeps its `bitgn_contest_agent`
# import path for the same reason (and to keep test imports stable).
bitgn-agent = "bitgn_contest_agent.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[[tool.uv.index]]
url = "https://buf.build/gen/python"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
